--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>GoT Personal Project</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
-    <script src="./js/got.js"></script>
+  <div class="container1">
+  </div>
+  <div class="container2"></div>
+  <script src="./js/got.js"></script>
 </body>
 
 </html>
