--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>GoT Personal Project</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>GoT Personal Project</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-  <div class="container1">
-  </div>
-  <div class="container2"></div>
-  <script src="./js/got.js"></script>
-</body>
-
+  <body>
+    <div class="row">
+      <div class="container left"></div>
+      <div class="container right"></div>
+    </div>
+    <script src="./js/got.js"></script>
+  </body>
 </html>
