added new style, finished search function

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>GoT Personal Project</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <div class="row">
-      <div class="container left"></div>
-      <div class="container right"></div>
-    </div>
+    <main>
+      <div class="row">
+        <div class="container left"></div>
+        <div class="container right">
+          <div class="title"><p id="titleParagraph"></p></div>
+          <div class="main"></div>
+          <div class="container-4">
+            <input type="search" id="search" placeholder="Search..." />
+            <button class="icon" id="searchBtn">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="./js/got.js"></script>
   </body>
 </html>
