--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>GoT Personal Project</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <main>
-      <div class="row">
-        <div class="container left"></div>
-        <div class="container right">
-          <div class="title"><p id="titleParagraph"></p></div>
-          <div class="main"></div>
-          <div class="container-4">
-            <input type="search" id="search" placeholder="Search..." />
-            <button class="icon" id="searchBtn">
-              <i class="fa fa-search"></i>
-            </button>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>GoT Personal Project</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <main>
+    <div class="row">
+      <div class="container left"></div>
+      <div class="container right">
+        <div class="title">
+          <p id="titleParagraph"></p>
+        </div>
+        <div class="main"></div>
+        <div class="container-4">
+          <input type="search" id="searchInput" placeholder="Search..." />
+          <button class="icon" id="searchBtn">
+            <i class="fa fa-search"></i>
+          </button>
         </div>
       </div>
-    </main>
-    <script src="./js/got.js"></script>
-  </body>
+    </div>
+  </main>
+  <script src="./js/got.js"></script>
+</body>
+
 </html>
